force-app/main/default/objects/Contact/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account.Account_Activated__c</description>
    <formula>Account.Account_Activated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account:</label>
    <type>Date</type>
</CustomField>