force-app/main/default/objects/Contact/fields/Account_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Deactivated_Date__c</fullName>
    <formula>Account.Account_Deactivated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account: Deactivated Date</label>
    <type>Date</type>
</CustomField>