force-app/main/default/objects/Contact/fields/Account_Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Program__c</fullName>
    <description>&quot;Partner Program&quot; field from related Account</description>
    <formula>TEXT(Account.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Partner Program&quot; field from related Account</inlineHelpText>
    <label>Account Partner Program</label>
    <type>Text</type>
</CustomField>