force-app/main/default/objects/Contact/fields/Account_SubSegment__c.field-meta.xml
<CustomField>
    <fullName>Account_SubSegment__c</fullName>
    <description>&quot;Account SubSegment&quot; from related Account</description>
    <formula>TEXT(Account.Account_SubSegment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Account SubSegment&quot; from related Account</inlineHelpText>
    <label>Account SubSegment</label>
    <type>Text</type>
</CustomField>