force-app/main/default/objects/Contact/fields/Bad_Email__c.field-meta.xml
<CustomField>
    <fullName>Bad_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The person&apos;s email has bounced.</description>
    <inlineHelpText>The person&apos;s email has bounced.</inlineHelpText>
    <label>Bad Email</label>
    <type>Checkbox</type>
</CustomField>