force-app/main/default/objects/Contact/fields/Bad_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bad_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The person&apos;s phone number is bad.</description>
    <inlineHelpText>The person&apos;s phone number is bad.</inlineHelpText>
    <label>Bad Phone</label>
    <type>Checkbox</type>
</CustomField>