force-app/main/default/objects/Contact/fields/Became_MQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Became_MQL_Date_Time__c</fullName>
    <label>Became MQL Date/Time</label>
    <type>DateTime</type>
</CustomField>