force-app/main/default/objects/Contact/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <description>Writes either &quot;Booked&quot; or &quot;Not Booked&quot; depending on whether a meeting from Chili Piper is successfully booked or not</description>
    <label>Booking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>