force-app/main/default/objects/Contact/fields/Business_Entity_where_GP_need__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_where_GP_need__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you currently operating business entities in the country where you&apos;re looking for global payroll? Qualification question used in forms and chat experiences.</description>
    <label>Business Entity where GP need?</label>
    <type>Checkbox</type>
</CustomField>