force-app/main/default/objects/Contact/fields/Calculate_Cost_of_Employment_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Cost_of_Employment_Last_90d__c</fullName>
    <inlineHelpText>#interactions with ‘Calculate Cost of Employment’ in Oyster platform over the last 90 days</inlineHelpText>
    <label>#Calculate Cost of Employment (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>