force-app/main/default/objects/Contact/fields/Clay_Auto_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Clay_Auto_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clay Auto-Enrolled</label>
    <type>Checkbox</type>
</CustomField>