force-app/main/default/objects/Contact/fields/Clay_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Clay_Cadence_Name__c</fullName>
    <description>The name of the Cadence that this contact will be enrolled in.</description>
    <label>Clay Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>