force-app/main/default/objects/Contact/fields/Clay_Cadence_Source__c.field-meta.xml
<CustomField>
    <fullName>Clay_Cadence_Source__c</fullName>
    <label>Clay Cadence Source</label>
    <type>TextArea</type>
</CustomField>