force-app/main/default/objects/Contact/fields/Clay_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Clay_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clay Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>