force-app/main/default/objects/Contact/fields/Clay_Email_1_Body__c.field-meta.xml
<CustomField>
    <fullName>Clay_Email_1_Body__c</fullName>
    <label>Clay Email 1 Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>