force-app/main/default/objects/Contact/fields/Clay_Email_1_Intro__c.field-meta.xml
<CustomField>
    <fullName>Clay_Email_1_Intro__c</fullName>
    <description>Automated email intro generated by Clay</description>
    <label>Clay Email 1 Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>