force-app/main/default/objects/Contact/fields/Clay_Email_1_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Clay_Email_1_Subject_Line__c</fullName>
    <label>Clay Email 1 Subject Line</label>
    <type>TextArea</type>
</CustomField>