force-app/main/default/objects/Contact/fields/Clay_Email_2_Intro__c.field-meta.xml
<CustomField>
    <fullName>Clay_Email_2_Intro__c</fullName>
    <label>Clay Email 2 Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>