force-app/main/default/objects/Contact/fields/Clay_Ready__c.field-meta.xml
<CustomField>
    <fullName>Clay_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clay Ready?</label>
    <type>Checkbox</type>
</CustomField>