force-app/main/default/objects/Contact/fields/Clay_Signals_Contact__c.field-meta.xml
<CustomField>
    <fullName>Clay_Signals_Contact__c</fullName>
    <label>Clay Signals &quot;Contact&quot;</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>