force-app/main/default/objects/Contact/fields/Comment_During_Import__c.field-meta.xml
<CustomField>
    <fullName>Comment_During_Import__c</fullName>
    <label>Comment During Import</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>