force-app/main/default/objects/Contact/fields/Contact_Owner_different_to_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_different_to_Account_Owner__c</fullName>
    <formula>OwnerId &lt;&gt; Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner different to Account Owner</label>
    <type>Checkbox</type>
</CustomField>