force-app/main/default/objects/Contact/fields/Conversion_Page__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Page__c</fullName>
    <label>Conversion Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>