force-app/main/default/objects/Contact/fields/Converted_from_lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to differentiate Contacts created on lead conversion. Accurate for conversions Jan 12, 2024 and after. Set to true on lead conversion through lead to contact mapping.</description>
    <label>Converted from lead</label>
    <type>Checkbox</type>
</CustomField>