force-app/main/default/objects/Contact/fields/Countries_Hiring_In__c.field-meta.xml
<CustomField>
    <fullName>Countries_Hiring_In__c</fullName>
    <label>Countries Hiring In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>