force-app/main/default/objects/Contact/fields/Countries_Hiring_In_CP__c.field-meta.xml
<CustomField>
    <fullName>Countries_Hiring_In_CP__c</fullName>
    <description>Countries hiring in from Chili Piper</description>
    <inlineHelpText>Countries hiring in from Chili Piper</inlineHelpText>
    <label>Countries Hiring In (CP)</label>
    <type>TextArea</type>
</CustomField>