force-app/main/default/objects/Contact/fields/Countries_Hiring_In_old__c.field-meta.xml
<CustomField>
    <fullName>Countries_Hiring_In_old__c</fullName>
    <label>Countries Hiring In (old)</label>
    <type>TextArea</type>
</CustomField>