force-app/main/default/objects/Contact/fields/Created_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile__c</fullName>
    <description>Profile that created the Contact</description>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profile that created the Contact</inlineHelpText>
    <label>Created by Profile</label>
    <type>Text</type>
</CustomField>