force-app/main/default/objects/Contact/fields/Creator_Profile__c.field-meta.xml
<CustomField>
    <fullName>Creator_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Profile</label>
    <type>Text</type>
</CustomField>