force-app/main/default/objects/Contact/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <label>Current Situation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Situation</valueSetName>
    </valueSet>
</CustomField>