force-app/main/default/objects/Contact/fields/Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Date__c</fullName>
    <description>for lifecycle funnel</description>
    <label>Customer Date</label>
    <type>Date</type>
</CustomField>