force-app/main/default/objects/Contact/fields/Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request__c</fullName>
    <label>Demo Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>