force-app/main/default/objects/Contact/fields/Demo_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request_Date__c</fullName>
    <label>Demo Request Date</label>
    <type>Date</type>
</CustomField>