force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The person was marked as &quot;Do Not Contact&quot; in Salesloft.</description>
    <inlineHelpText>The person was marked as &quot;Do Not Contact&quot; in Salesloft.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>