force-app/main/default/objects/Contact/fields/Email_Domain_Matches_Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Matches_Account_Domain__c</fullName>
    <description>TRUE if the contact&apos;s email domain matches the account&apos;s website domain.</description>
    <formula>Email_Domain__c = Account.cbit__ClearbitDomain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain Matches Account Domain</label>
    <type>Checkbox</type>
</CustomField>