force-app/main/default/objects/Contact/fields/Email_Domain_stamp__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_stamp__c</fullName>
    <description>Populated via flow.  Copies the Email Domain formula field so that it can be used in duplicate rules.</description>
    <label>Email Domain (stamp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>