force-app/main/default/objects/Contact/fields/Email_Touches_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Touches_Last_7_Days__c</fullName>
    <description>Populated by DLRS.</description>
    <label># Email Touches Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>