force-app/main/default/objects/Contact/fields/Engage_owner__c.field-meta.xml
<CustomField>
    <fullName>Engage_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to map owner with the AAM team when doing cadences</description>
    <label>Engage owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>