force-app/main/default/objects/Contact/fields/First_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date__c</fullName>
    <description>Populated by a flow when a task/event is related to the contact.</description>
    <label>First Activity Date</label>
    <type>Date</type>
</CustomField>