force-app/main/default/objects/Contact/fields/Gong__Current_Flow_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_Step_Type__c</fullName>
    <label>Current Flow Step Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>