force-app/main/default/objects/Contact/fields/Gong__Flow_Execution_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Flow_Execution_ID__c</fullName>
    <label>Flow Execution ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>