force-app/main/default/objects/Contact/fields/Has_Moved__c.field-meta.xml
<CustomField>
    <fullName>Has_Moved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The person has moved roles and is no longer employed by the company.</description>
    <inlineHelpText>The person has moved roles and is no longer employed by the company.</inlineHelpText>
    <label>Has Moved</label>
    <type>Checkbox</type>
</CustomField>