force-app/main/default/objects/Contact/fields/How_Hiring_Works_Views_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>How_Hiring_Works_Views_Last_90d__c</fullName>
    <inlineHelpText>#views ‘How Hiring Works’ in Oyster platform over the last 90 days</inlineHelpText>
    <label>#How Hiring Works Views (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>