force-app/main/default/objects/Contact/fields/HubSpot_Helper__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Helper__c</fullName>
    <label>HubSpot Helper</label>
    <length>250</length>
    <type>Text</type>
</CustomField>