force-app/main/default/objects/Contact/fields/Job_Changes__c.field-meta.xml
<CustomField>
    <fullName>Job_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enriched from Clearbit</description>
    <label>Job Changes</label>
    <type>Checkbox</type>
</CustomField>