force-app/main/default/objects/Contact/fields/last_completed_step_number__c.field-meta.xml
<CustomField>
    <fullName>last_completed_step_number__c</fullName>
    <label>last completed step number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>