force-app/main/default/objects/Contact/fields/Last_Conversion_Page__c.field-meta.xml
<CustomField>
    <fullName>Last_Conversion_Page__c</fullName>
    <label>Last Conversion Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>