force-app/main/default/objects/Contact/fields/Last_LinkedIn_Pilot_Chat__c.field-meta.xml
<CustomField>
    <fullName>Last_LinkedIn_Pilot_Chat__c</fullName>
    <description>Set in LeanData on recognized Chat-updated contact sourced through LI pilot experience.</description>
    <label>Last LinkedIn Pilot Chat</label>
    <type>Date</type>
</CustomField>