force-app/main/default/objects/Contact/fields/Last_MQL_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Reason__c</fullName>
    <label>MQL Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>