force-app/main/default/objects/Contact/fields/Last_Sales_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Connect__c</fullName>
    <description>This field will be used in the DLRS for the Account Last Sales Connect field.</description>
    <label>Last Sales Connect</label>
    <type>Date</type>
</CustomField>