force-app/main/default/objects/Contact/fields/Last_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Event__c</fullName>
    <label>Last Sales Event</label>
    <type>DateTime</type>
</CustomField>