force-app/main/default/objects/Contact/fields/Last_utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_utm_campaign__c</fullName>
    <label>Last utm_campaign</label>
    <type>TextArea</type>
</CustomField>