force-app/main/default/objects/Contact/fields/Last_utm_content__c.field-meta.xml
<CustomField>
    <fullName>Last_utm_content__c</fullName>
    <label>Last utm_content</label>
    <type>TextArea</type>
</CustomField>