force-app/main/default/objects/Contact/fields/Last_utm_medium__c.field-meta.xml
<CustomField>
    <fullName>Last_utm_medium__c</fullName>
    <label>Last utm_medium</label>
    <type>TextArea</type>
</CustomField>