force-app/main/default/objects/Contact/fields/Lead_Issue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Issue__c</fullName>
    <label>Lead Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Wrong Title</fullName>
            </value>
            <value>
                <fullName>Wrong Industry</fullName>
            </value>
            <value>
                <fullName>Wrong Location</fullName>
            </value>
            <value>
                <fullName>Leavelist</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>