force-app/main/default/objects/Contact/fields/Lead_Source_Subgrouping__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Subgrouping__c</fullName>
    <formula>IF(ISBLANK(TEXT(LeadSource)),&quot;&quot;,
IF(CONTAINS($Label.Legacy_Lead_Source_Subgrouping,TEXT(LeadSource) + &quot;;&quot;),&quot;Legacy&quot;,
IF(CONTAINS($Label.Non_paid_Lead_Source_Subgrouping,TEXT(LeadSource) + &quot;;&quot;),&quot;Non paid&quot;,
IF(CONTAINS($Label.Paid_Lead_Source_Subgrouping,TEXT(LeadSource) + &quot;;&quot;),&quot;Paid&quot;,
IF(CONTAINS($Label.Outbound_Lead_Source_Subgrouping,TEXT(LeadSource) + &quot;;&quot;),&quot;Outbound&quot;,
IF(CONTAINS($Label.Partner_Lead_Source_Subgrouping,TEXT(LeadSource) + &quot;;&quot;),&quot;Partner&quot;,
&quot;&quot;
)
)
)
)
)
)</formula>
    <label>Lead Source Subgrouping</label>
    <type>Text</type>
</CustomField>