force-app/main/default/objects/Contact/fields/leadassist__Round_Robin_Info__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Round_Robin_Info__c</fullName>
    <inlineHelpText>Stores debug and log information for SuperRoundRobin</inlineHelpText>
    <label>Round Robin Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>