force-app/main/default/objects/Contact/fields/leadassist__Use_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Use_Round_Robin__c</fullName>
    <inlineHelpText>TRUE causes the record to be processed by SuperRoundRobin</inlineHelpText>
    <label>Use Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
                <default>true</default>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>NOMATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>