force-app/main/default/objects/Contact/fields/LeanData_Reassign_to_the_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Reassign_to_the_Lead_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE in LeanData to facilitate ownership alignment and set to FALSE in HubSpot when the workflow finishes alignment.</description>
    <label>LeanData Reassign to the Lead Owner</label>
    <type>Checkbox</type>
</CustomField>