force-app/main/default/objects/Contact/fields/Meeting_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Date__c</fullName>
    <description>TESTING DLRS</description>
    <label>Meeting Booked Date</label>
    <type>DateTime</type>
</CustomField>