force-app/main/default/objects/Contact/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <description>Meeting Type from a Chili Piper booked meeting</description>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>